--- a/app/views/confirmations_mailer/welcome.html.erb
+++ b/app/views/confirmations_mailer/welcome.html.erb
@@ -16,10 +16,11 @@
   🎉 The hacking ends on Saturday 27.4. at 17.00 with voting and proper celebrations
 </p>
 <p>
-  Keep yourself updated on latest news by following ouluopenhack.org, and If you have any special dietary requests, send us an email at <pre>makers@ouluopenhack.org</pre>.
+  Keep yourself updated on latest news by following ouluopenhack.org, and If you have any special dietary requests, send us an email at <a href="mailto:makers@ouluopenhack.org"><code>makers@ouluopenhack.org</code></a>.
 </p>
 <p>
-  ps. join <strong>Oulu Tech Scene</strong> telegram group to get into the right mood and don’t hesitate to contact the organisers in case of cancellations or questions! The link is <a href="https://t.me/joinchat/APsWWw7qFCcru4mPGtxxmQ">here</a>.
+  ps. Remember to join <a href="https://t.me/joinchat/APsWWw7qFCcru4mPGtxxmQ">Oulu Tech Scene</a> telegram group -- In case of cancellations or questions, don't hesitate to email us back.
+</p>
 </p>
 <p>
   Oulu Open Hack 26.-27.04.2019<br>
