--- a/app/views/confirmations_mailer/welcome.text.erb
+++ b/app/views/confirmations_mailer/welcome.text.erb
@@ -12,8 +12,7 @@ and drinks provided by industry sponsors
 
 Keep yourself updated on latest news by following ouluopenhack.org, and If you have any special dietary requests, send us an email at makers@ouluopenhack.org.
 
-ps. join Oulu Tech Scene telegram group to get into the right mood
-and don’t hesitate to contact the organisers in case of cancellations or questions! The link is here: https://t.me/joinchat/APsWWw7qFCcru4mPGtxxmQ
+ps. Remember to join Oulu Tech Scene telegram group (https://t.me/joinchat/APsWWw7qFCcru4mPGtxxmQ) -- In case of cancellations or questions, don't hesitate to email us back.
 
 Oulu Open Hack 26.-27.04.2019
 Business Kitchen Tellus, University of Oulu
